# can_slave4

./: manual.txt
init/: can_init_compile.sh
init/mex_cmake/src/mex/mexAdd/: CMakeLists.txt  can_main.c
init/mex_cmake/src/mex/mexAdd/epos_motor/: epos_env.c  epos_env.h  epos_motor_api.c
init/mex_cmake/src/mex/mexAdd/master/: MasterAPI.h  MasterOD.c
init/mex_cmake/src/mex/mexAdd/slave/: SlaveOD.c
run/: can_run_compile.sh
run/mex_cmake/src/mex/mexAdd/: CMakeLists.txt  can_main.c
run/mex_cmake/src/mex/mexAdd/c_tool/: thread_tool.c  thread_tool.h
run/mex_cmake/src/mex/mexAdd/can_shells/: can0_setup.sh
run/mex_cmake/src/mex/mexAdd/canfestival/: sdo.h
run/mex_cmake/src/mex/mexAdd/epos_motor/: epos_env.c  epos_env.h  epos_motor_api.c  epos_motor_api.h
run/mex_cmake/src/mex/mexAdd/master/: MasterOD.h  MasterOD.od
run/mex_cmake/src/mex/mexAdd/slave/: SlaveOD.h  SlaveOD.od
stop/: can_stop_compile.sh
stop/mex_cmake/src/cmake/: FindMatlab.cmake
stop/mex_cmake/src/mex/mexAdd/: can_main.c
stop/mex_cmake/src/mex/mexAdd/epos_motor/: epos_motor_api.h  epos_od_process.c  epos_od_process.h
stop/mex_cmake/src/mex/mexAdd/master/: MasterAPI.c
stop/mex_cmake/src/mex/mexAdd/slave/: SlaveAPI.c  SlaveAPI.h
z_matlab_file/: init.mexa64  run.mexa64  simulink_test.slx
z_matlab_file/slprj/_jitprj/: sKg4v8iTF1FtAmcrb1cDSIE.l  sKg4v8iTF1FtAmcrb1cDSIE.mat  sX7kjl6G1rsfQi8JUYaMPEH.l  sX7kjl6G1rsfQi8JUYaMPEH.mat
z_matlab_file/slprj/_sfprj/EMLReport/: R2J7zEp0Ggb98a2NSypVEG.mat  sKg4v8iTF1FtAmcrb1cDSIE.mat  sX7kjl6G1rsfQi8JUYaMPEH.mat
z_matlab_file/slprj/_sfprj/precompile/: FRBAa8xMXSkVjE2x83VTRF.mat  ZKJYHCYNu1Ngq1nTQJXsuE.mat  f9feVpLAmR4lrI0K3KnDSE.mat  sdL7y3LGIjtMsLvrZ4JrHE.mat
z_matlab_file/slprj/_sfprj/simulink_test/_self/sfun/info/: binfo.mat
